fix(breadcrumb): arrow alignment after last merge

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -23,10 +23,10 @@
     &::before {
       display: inline-block; // Suppress underlining of the separator in modern browsers
       // Boosted mod
+      align-self: center;
       width: $breadcrumb-divider-width;
       height: $breadcrumb-divider-height;
       margin-right: map-get($spacers, 2);
-      vertical-align: middle;
       content: "";
       background-image: escape-svg($breadcrumb-divider);
       background-repeat: no-repeat;
